--- a/requirements.txt
+++ b/requirements.txt
@@ -6,4 +6,4 @@ urllib3>=1.19.1,!=1.21  # MIT
 pyyaml>=3.12  # MIT
 oauth2client>=4.0.0  # Apache-2.0
 ipaddress>=1.0.17  # PSF
-websocket-client>=0.32.0 # LGPLv2+
+websocket-client>=0.32.0,!=0.41.*,!=0.42.* # LGPLv2+
