--- a/examples/nginx-deployment.yaml
+++ b/examples/nginx-deployment.yaml
@@ -1,9 +1,14 @@
-apiVersion: extensions/v1beta1
+apiVersion: apps/v1beta2 # for versions before 1.8.0 use apps/v1beta1
 kind: Deployment
 metadata:
   name: nginx-deployment
+  labels:
+    app: nginx
 spec:
   replicas: 3
+  selector:
+    matchLabels:
+      app: nginx
   template:
     metadata:
       labels:
@@ -14,4 +19,3 @@ spec:
         image: nginx:1.7.9
         ports:
         - containerPort: 80
-
