--- a/tox.ini
+++ b/tox.ini
@@ -23,16 +23,19 @@ commands =
 commands =
    python -V
    {toxinidir}/scripts/kube-init.sh py.test -vvv -s []
+   {toxinidir}/scripts/kube-init.sh python examples/exec.py
 
 [testenv:py35-functional]
 commands =
    python -V
    {toxinidir}/scripts/kube-init.sh py.test -vvv -s []
+   {toxinidir}/scripts/kube-init.sh python examples/exec.py
 
 [testenv:py36-functional]
 commands =
    python -V
    {toxinidir}/scripts/kube-init.sh py.test -vvv -s []
+   {toxinidir}/scripts/kube-init.sh python examples/exec.py
 
 [testenv:coverage]
 commands =
