testing: show local variables
Signed-off-by: Tomas Tomecek <ttomecek@redhat.com>

--- a/tox.ini
+++ b/tox.ini
@@ -9,7 +9,7 @@ deps = -r{toxinidir}/test-requirements.txt
        -r{toxinidir}/requirements.txt
 commands =
    python -V
-   py.test -vvv -s --ignore=kubernetes/e2e_test
+   py.test -vvv -s --showlocals --ignore=kubernetes/e2e_test
 
 [testenv:docs]
 commands =
