--- a/requirements.txt
+++ b/requirements.txt
@@ -7,5 +7,5 @@ google-auth>=1.0.1  # Apache-2.0
 websocket-client>=0.32.0,!=0.40.0,!=0.41.*,!=0.42.* # LGPLv2+
 requests # Apache-2.0
 requests-oauthlib # ISC
-urllib3>=1.24.2  # MIT
+urllib3>=1.24.2,<2.4.0  # MIT
 durationpy>=0.7 # MIT
