feat: Avoid urllib3 2.6.0
See https://github.com/kubernetes-client/python/issues/2477

Signed-off-by: Mathieu Parent <math.parent@etik.com>

--- a/requirements.txt
+++ b/requirements.txt
@@ -6,5 +6,5 @@ pyyaml>=5.4.1  # MIT
 websocket-client>=0.32.0,!=0.40.0,!=0.41.*,!=0.42.* # LGPLv2+
 requests # Apache-2.0
 requests-oauthlib # ISC
-urllib3>=1.24.2 # MIT
+urllib3>=1.24.2,!=2.6.0 # MIT
 durationpy>=0.7 # MIT
