Fix tox configuration
Use more recent Python versions and remove use of the build_sphinx
distutils command which hasn't existed for many years now.

Signed-off-by: Stephen Finucane <stephenfin@redhat.com>

--- a/tox.ini
+++ b/tox.ini
@@ -1,26 +1,37 @@
 [tox]
 envlist =
-   py3{6,7,8,9}
-   py3{6,7,8,9}-functional
+  py3{10,11,12,13}{,-functional}
+  coverage
 
 [testenv]
-passenv = TOXENV,CI,TRAVIS,TRAVIS_*
-usedevelop = True
-install_command = pip install -U {opts} {packages}
-deps = -r{toxinidir}/test-requirements.txt
-       -r{toxinidir}/requirements.txt
-commands =
-   python -V
-   !functional: pytest -vvv -s {env:_TOX_COVERAGE_RUN:} --ignore=kubernetes/e2e_test
-   functional: {toxinidir}/scripts/kube-init.sh pytest -vvv -s []
-   coverage: python -m coverage xml
+use_develop = true
+deps =
+  -r{toxinidir}/test-requirements.txt
+  -r{toxinidir}/requirements.txt
 setenv =
-   coverage: _TOX_COVERAGE_RUN=--cov=kubernetes/watch --cov=kubernetes/config
+  # Unset KUBECONFIG to prevent tests from picking up local cluster configuration
+  KUBECONFIG = {envtmpdir}/.kubeconfig-nonexistent
+commands =
+  python -V
+  pytest -vvv -s {env:_TOX_COVERAGE_RUN:} --ignore=kubernetes/e2e_test {posargs}
+
+[testenv:py3{10,11,12,13}-functional]
+setenv =
+allowlist_externals =
+  scripts/kube-init.sh
+commands =
+  {toxinidir}/scripts/kube-init.sh pytest -vvv -s [] {posargs}
+
+[testenv:coverage]
+setenv =
+  {[testenv]setenv}
+  _TOX_COVERAGE_RUN=--cov=kubernetes/watch --cov=kubernetes/config
+commands =
+  {[testenv:coverage]commands}
+  python -m coverage xml
 
 [testenv:docs]
+deps =
+  -r{toxinidir}/doc/requirements.txt
 commands =
-   python setup.py build_sphinx
-
-[testenv:update-pycodestyle]
-commands =
-   {toxinidir}/scripts/update-pycodestyle.sh
+  sphinx-build -W --keep-going -b html -j auto doc/source/ doc/build/html
