Add testing for Python 3.13
Python 3.13 is the latest and greatest.

Signed-off-by: Stephen Finucane <stephenfin@redhat.com>

--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -7,11 +7,10 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: ["3.8", "3.10", "3.11", "3.12"]
+        python-version: ["3.8", "3.9", "3.10", "3.11", "3.12", "3.13"]
         include:
-          - python-version: "3.9"
+          - python-version: "3.13"
             use_coverage: 'coverage'
-
     steps:
     - uses: actions/checkout@v6
       with:
